--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-toastr": "^2.0.2",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {}
 }
